# MANTA

./: README.md
MANTA/manta_dxl/: CMakeLists.txt
MANTA/manta_dxl/config/: manta.motion  manta.motor
MANTA/manta_dxl/config/tale/: idle.back  idle.yaml  init.yaml
MANTA/manta_dxl/config/wing/: idle.yaml
MANTA/manta_dxl/include/manta_dxl/: Motions.h  Parser.h  dxl_func.h
MANTA/manta_dxl/src/: Motions.cpp  Parser.cpp  bulk_read_write_node.cpp  dxl_func.cpp  manta_dxl_node.cpp  test_node.cpp
MANTA/manta_led/: CMakeLists.txt  package.xml
MANTA/manta_led/include/edie_led/: Led.hpp
MANTA/manta_led/src/: Led.cpp  edie_led_node.cpp  manta_led_node.cpp
MANTA/manta_main/: CMakeLists.txt  package.xml
MANTA/manta_main/src/: manta_main_node.cpp
manta_dxl/: CMakeLists.txt  package.xml
manta_dxl/config/: .manta.motor.swp  manta.motion  manta.motor
manta_dxl/config/tale/: idle.yaml  init.yaml
manta_dxl/config/wing/: idle.yaml  init.yaml
manta_dxl/include/manta_dxl/: Parser.h  trajectory.h
manta_dxl/launch/: manta_dxl.launch
manta_dxl/src/: Parser.cpp  manta_dxl_node.cpp  trajectory.cpp
manta_led/: CMakeLists.txt  package.xml
manta_led/include/manta_led/: Led.hpp
manta_led/led_data/: ID.txt  led_color.txt
manta_led/src/: Led.cpp  manta_led_node.cpp
manta_main/: CMakeLists.txt
manta_main/config/: pose.yaml  poseLed.yaml
manta_main/include/manta_main/: Manta.h  manta.h  manta_main_node.h
manta_main/launch/: manta_main.launch
manta_main/src/: Manta.cpp  Manta.cpp.save  manta.cpp  manta_main_node.cpp
manta_mp3/: CMakeLists.txt  package.xml
manta_mp3/config/: mp3.yaml
manta_mp3/include/: Mp3.h
manta_mp3/src/: Mp3.cpp  manta_mp3_node.cpp
manta_setup/: manta_node_start.service  manta_node_start.sh  manta_roscore_start.service  manta_roscore_start.sh
manta_setup/service/: manta_node_start.service  manta_pose_start.service  manta_roscore_start.service
manta_setup/shellscript/: .manta_pose_start.sh.swp  manta_motor_start.sh  manta_node_start.sh  manta_pose_start.service  manta_pose_start.sh  manta_roscore_start.sh
