<?xml version="1.0"?>
<package format="1">
  <name>edie_led</name>
  <version>0.0.0</version>
  <description>The edie_led package</description>
  
  <maintainer email="pi@todo.todo">pi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pigpiod_if2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pigpiod_if2</run_depend>


</package>
